[gd_scene load_steps=28 format=3 uid="uid://drq7jbhkdweyx"]

[ext_resource type="Script" path="res://scripts/h_terrain_2.gd" id="2_e301n"]
[ext_resource type="Script" path="res://addons/zylann.hterrain/hterrain.gd" id="2_nkpal"]
[ext_resource type="Resource" path="res://terrainData/data.hterrain" id="3_vamiy"]
[ext_resource type="Script" path="res://addons/zylann.hterrain/hterrain_texture_set.gd" id="4_xhvfg"]
[ext_resource type="Texture2D" uid="uid://dyfq6h6ftigxl" path="res://images/level_slot0_albedo_bump.png" id="6_d2gf7"]
[ext_resource type="Texture2D" uid="uid://bhhxray3m6qme" path="res://images/level_slot0_normal_roughness.png" id="7_5oaa8"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="7_ehc8q"]
[ext_resource type="Script" path="res://scripts/v_box_container.gd" id="8_7jmc3"]
[ext_resource type="ArrayMesh" uid="uid://coiqe7m83k5m0" path="res://dronePreview.obj" id="8_oo8wx"]
[ext_resource type="Script" path="res://scripts/drone_model.gd" id="8_vtp0b"]
[ext_resource type="Script" path="res://scripts/csg_sphere_3d.gd" id="9_2ulai"]
[ext_resource type="Script" path="res://scripts/label.gd" id="9_5a6la"]
[ext_resource type="Script" path="res://scripts/load_image.gd" id="9_ki6ie"]
[ext_resource type="Script" path="res://scripts/label_2.gd" id="10_csk1e"]
[ext_resource type="Script" path="res://levels/loc_rot_control.gd" id="10_shomh"]
[ext_resource type="Script" path="res://scripts/start.gd" id="12_hyliw"]
[ext_resource type="Script" path="res://levels/path_indicator.gd" id="15_vgiae"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_axhec"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_57i6u"]
sky_material = SubResource("ProceduralSkyMaterial_axhec")

[sub_resource type="Environment" id="Environment_v6njc"]
background_mode = 2
sky = SubResource("Sky_57i6u")
tonemap_mode = 2
fog_enabled = true
fog_mode = 1
fog_light_color = Color(0.329412, 0.407843, 0.403922, 1)
fog_density = 0.163
fog_depth_curve = 0.392291
fog_depth_begin = 45.0
fog_depth_end = 150.0

[sub_resource type="Resource" id="Resource_1flx4"]
script = ExtResource("4_xhvfg")
mode = 0
textures = [[ExtResource("6_d2gf7")], [ExtResource("7_5oaa8")]]

[sub_resource type="SystemFont" id="SystemFont_2u2dt"]
font_names = PackedStringArray("Comic Sans MS")

[sub_resource type="SystemFont" id="SystemFont_gor4j"]
font_names = PackedStringArray("Comic Sans MS")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_dwix2"]
font_names = PackedStringArray("Comic Sans MS")

[sub_resource type="SystemFont" id="SystemFont_aa34t"]
font_names = PackedStringArray("Comic Sans MS")

[sub_resource type="SystemFont" id="SystemFont_knmce"]
font_names = PackedStringArray("Comic Sans MS")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_vsc3d"]
font_names = PackedStringArray("Comic Sans MS")
subpixel_positioning = 0

[node name="level" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 72, 0)
shadow_enabled = true

[node name="FogVolume" type="FogVolume" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_v6njc")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -7.5)
visible = false
use_collision = true
size = Vector3(30, 1, 30)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_e301n")

[node name="HTerrain" type="Node3D" parent="Control"]
script = ExtResource("2_nkpal")
map_scale = Vector3(1, 0.325, 1)
centered = true
_terrain_data = ExtResource("3_vamiy")
chunk_size = 32
collision_enabled = true
collision_layer = 1
collision_mask = 1
shader_type = "Classic4Lite"
custom_shader = null
custom_globalmap_shader = null
texture_set = SubResource("Resource_1flx4")
render_layers = 1
cast_shadow = 1
shader_params/u_ground_uv_scale = 20
shader_params/u_depth_blending = true
shader_params/u_triplanar = null
shader_params/u_tile_reduction = null

[node name="FreeLookCamera" type="Camera3D" parent="." node_paths=PackedStringArray("target_node")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 34.5781, 0)
script = ExtResource("7_ehc8q")
target_node = NodePath("../CSGSphere3D")

[node name="Polygon2D4" type="Polygon2D" parent="."]
position = Vector2(1002.85, -548.792)
scale = Vector2(1.28169, 1.47465)
color = Color(0.152941, 0.152941, 0.152941, 0.462745)
offset = Vector2(-10.63, 0)
polygon = PackedVector2Array(4.63, 600, 127, 600, 127, 383, 4, 383)

[node name="DroneModel" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -57.4126, 0)
mesh = ExtResource("8_oo8wx")
script = ExtResource("8_vtp0b")

[node name="LocRotControl" type="Control" parent="DroneModel"]
layout_mode = 3
anchors_preset = 0
offset_top = -8.215
offset_right = 40.0
offset_bottom = 31.785
script = ExtResource("10_shomh")

[node name="xpos" type="Label" parent="DroneModel/LocRotControl"]
layout_mode = 0
offset_left = 1000.0
offset_top = 96.215
offset_right = 1144.0
offset_bottom = 150.215
theme_override_fonts/font = SubResource("SystemFont_2u2dt")
theme_override_font_sizes/font_size = 24
text = "X:"

[node name="ypos" type="Label" parent="DroneModel/LocRotControl"]
layout_mode = 0
offset_left = 1000.0
offset_top = 128.215
offset_right = 1144.0
offset_bottom = 182.215
theme_override_fonts/font = SubResource("SystemFont_2u2dt")
theme_override_font_sizes/font_size = 24
text = "Y:"

[node name="zpos" type="Label" parent="DroneModel/LocRotControl"]
layout_mode = 0
offset_left = 1000.0
offset_top = 160.215
offset_right = 1144.0
offset_bottom = 214.215
theme_override_fonts/font = SubResource("SystemFont_2u2dt")
theme_override_font_sizes/font_size = 24
text = "Z:"

[node name="xrot" type="Label" parent="DroneModel/LocRotControl"]
layout_mode = 0
offset_left = 1000.0
offset_top = 240.0
offset_right = 1144.0
offset_bottom = 294.0
theme_override_fonts/font = SubResource("SystemFont_2u2dt")
theme_override_font_sizes/font_size = 24
text = "X:"

[node name="yrot" type="Label" parent="DroneModel/LocRotControl"]
layout_mode = 0
offset_left = 1000.0
offset_top = 272.215
offset_right = 1144.0
offset_bottom = 326.215
theme_override_fonts/font = SubResource("SystemFont_2u2dt")
theme_override_font_sizes/font_size = 24
text = "Y:"

[node name="zrot" type="Label" parent="DroneModel/LocRotControl"]
layout_mode = 0
offset_left = 1000.0
offset_top = 304.215
offset_right = 1144.0
offset_bottom = 358.215
theme_override_fonts/font = SubResource("SystemFont_2u2dt")
theme_override_font_sizes/font_size = 24
text = "Z:"

[node name="rotaton_label" type="Label" parent="DroneModel"]
offset_left = 1000.0
offset_top = 200.0
offset_right = 1144.0
offset_bottom = 254.0
theme_override_fonts/font = SubResource("SystemFont_2u2dt")
theme_override_font_sizes/font_size = 24
text = "Rotation"

[node name="position_label" type="Label" parent="DroneModel"]
offset_left = 1000.0
offset_top = 56.0
offset_right = 1144.0
offset_bottom = 110.0
theme_override_fonts/font = SubResource("SystemFont_2u2dt")
theme_override_font_sizes/font_size = 24
text = "Position"

[node name="CSGSphere3D" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -112.695, -7.5)
radius = 0.25
script = ExtResource("9_2ulai")

[node name="Polygon2D3" type="Polygon2D" parent="."]
position = Vector2(10.3535, -688.751)
scale = Vector2(2.71244, 1.76959)
color = Color(0.152941, 0.152941, 0.152941, 0.67451)
offset = Vector2(-10.63, 0)
polygon = PackedVector2Array(4.63, 600, 127, 600, 127, 383, 4, 383)

[node name="Control3" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="Control3"]
layout_mode = 0
offset_right = 326.0
offset_bottom = 373.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control3/ScrollContainer"]
layout_mode = 2
script = ExtResource("8_7jmc3")

[node name="Polygon2D2" type="Polygon2D" parent="."]
position = Vector2(24.2905, -8)
scale = Vector2(0.289675, 1)
color = Color(0.152941, 0.152941, 0.152941, 0.494118)
offset = Vector2(-10.63, 0)
polygon = PackedVector2Array(4.63, 600, 127, 600, 127, 383, 4, 383)

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(1102.29, -45.5392)
scale = Vector2(0.495935, 1.1659)
color = Color(0.152941, 0.152941, 0.152941, 0.4)
offset = Vector2(-10.63, 0)
polygon = PackedVector2Array(4.63, 600, 127, 600, 127, 383, 4, 383)

[node name="Label2" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.174
anchor_top = 0.222
anchor_right = 0.174
anchor_bottom = 0.222
offset_left = -136.448
offset_top = 232.144
offset_right = -78.448
offset_bottom = 266.144
theme_override_fonts/font = SubResource("SystemFont_gor4j")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
script = ExtResource("10_csk1e")

[node name="Label" type="Label" parent="."]
offset_left = 1097.0
offset_top = 404.0
offset_right = 1155.0
offset_bottom = 438.0
theme_override_fonts/font = SubResource("SystemFont_gor4j")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
script = ExtResource("9_5a6la")

[node name="Panel" type="Panel" parent="."]

[node name="OffsetSlider" type="VSlider" parent="Panel"]
layout_mode = 0
offset_left = 1092.0
offset_top = 457.0
offset_right = 1153.0
offset_bottom = 648.0
min_value = 1.0
max_value = 50.0
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="MapHeightSlider" type="VSlider" parent="Panel"]
layout_mode = 0
offset_left = 3.0
offset_top = 386.0
offset_right = 67.0
offset_bottom = 581.0
min_value = 50.0
max_value = 500.0
step = 10.0
value = 100.0
tick_count = 10
ticks_on_borders = true

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("9_ki6ie")

[node name="LoadImage" type="Button" parent="Control2"]
layout_mode = 0
offset_left = 4.0
offset_top = 597.0
offset_right = 312.0
offset_bottom = 651.0
theme_override_colors/font_hover_color = Color(0.212305, 0.212305, 0.212305, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_dwix2")
theme_override_font_sizes/font_size = 32
text = "Load new height map"
alignment = 0

[node name="FileDialog" type="FileDialog" parent="Control2"]
auto_translate_mode = 1
title = "Open a File"
initial_position = 1
size = Vector2i(887, 515)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="Path_indicator" type="Label" parent="Control2"]
layout_mode = 0
offset_left = 1000.0
offset_top = 8.0
offset_right = 1174.0
offset_bottom = 54.0
theme_override_fonts/font = SubResource("SystemFont_aa34t")
theme_override_font_sizes/font_size = 32
text = "No path"
script = ExtResource("15_vgiae")

[node name="Start" type="Button" parent="."]
offset_left = 64.0
offset_top = 532.0
offset_right = 320.0
offset_bottom = 586.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_knmce")
theme_override_font_sizes/font_size = 32
text = "Start"
script = ExtResource("12_hyliw")

[node name="hidePath" type="Button" parent="Start"]
layout_mode = 0
offset_left = 64.0
offset_top = -158.0
offset_right = 256.0
offset_bottom = -121.0
theme_override_fonts/font = SubResource("SystemFont_vsc3d")
theme_override_font_sizes/font_size = 20
text = "Hide path"

[node name="updateMap" type="Button" parent="Start"]
layout_mode = 0
offset_top = -120.0
offset_right = 256.0
offset_bottom = -66.0
theme_override_fonts/font = SubResource("SystemFont_vsc3d")
theme_override_font_sizes/font_size = 32
text = "Update map"

[node name="reset" type="Button" parent="Start"]
layout_mode = 0
offset_top = -60.0
offset_right = 256.0
offset_bottom = -8.0
theme_override_fonts/font = SubResource("SystemFont_vsc3d")
theme_override_font_sizes/font_size = 32
text = "Set"

[connection signal="value_changed" from="Panel/OffsetSlider" to="FreeLookCamera" method="_on_offset_slider_value_changed"]
[connection signal="value_changed" from="Panel/OffsetSlider" to="Label" method="_on_offset_slider_value_changed"]
[connection signal="value_changed" from="Panel/MapHeightSlider" to="Control" method="_on_map_height_slider_value_changed"]
[connection signal="value_changed" from="Panel/MapHeightSlider" to="Label2" method="_on_map_height_slider_value_changed"]
[connection signal="pressed" from="Control2/LoadImage" to="Control2" method="_on_load_image_pressed"]
[connection signal="file_selected" from="Control2/FileDialog" to="Control2" method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="Start" to="Start" method="_on_pressed"]
[connection signal="pressed" from="Start/hidePath" to="FreeLookCamera" method="_on_hide_path_pressed"]
[connection signal="pressed" from="Start/updateMap" to="Control" method="_on_reset_2_pressed"]
[connection signal="pressed" from="Start/reset" to="DroneModel" method="_on_reset_pressed"]
